feat: Enhance transaction API and add daily report generation
- Updated the /api/transactions endpoint to support filtering by flagged transactions.
- Modified the transaction fetching logic to handle both flagged and unflagged transactions based on query parameters.
- Improved logging for transaction requests and responses.
- Updated the frontend to include filter parameters when fetching transactions.
- Added a new report.js file to generate and send daily email reports summarizing alerts, categorized by severity.

--- a/test.html
+++ b/test.html
@@ -1008,7 +1008,7 @@ function initializeUI() {
     const filterValue = txFilter.value;
     
     // Fetch transactions directly from API with filter
-    const response = await fetchAPI(`/transactions`);
+    const response = await fetchAPI(`/transactions?${filterValue}`);
     const transactions = response.transactions || [];
     console.log('Fetched transactions:', transactions);
     console.log(transactions.length);
