fix: update notification frequency option value from 'instant' to 'immediate'

--- a/test.html
+++ b/test.html
@@ -505,7 +505,7 @@
               <div>
                 <label for="alert-frequency" class="form-label">Notification Frequency</label>
                 <select id="alert-frequency" name="alert-frequency" class="form-input">
-                  <option value="instant">Real-time</option>
+                  <option value="immediate">Real-time</option>
                   <option value="hourly">Hourly Digest</option>
                   <option value="daily">Daily Summary</option>
                 </select>
